fixed overflow: scroll in header's .box

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -28,7 +28,6 @@ header {
     display: flex;
     align-items: center;
     .box {
-            overflow: scroll;
             h1 {
                 color: $navy;
                 line-height: 0.9;
